fix: list item text-align

--- a/src/app/components/toDoList.scss
+++ b/src/app/components/toDoList.scss
@@ -18,7 +18,7 @@
 
         p {
             color: hsla(0, 0%, 0%, 0.54);
-            text-align: center;
+            text-align: left;
             font-size: 16px;
             font-weight: 400;
 
